Fixed alignment and removed hover temporarily
Fixed a bunch of the alignment issues. Will perfect the minor details
and then add hover.

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -1,6 +1,6 @@
 html, body {
   background: gray;
-  font-family: Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -16,46 +16,9 @@ html {
   width: 800px;
 }
 
-/*h1 {
-  text-align: center;
-  color: white;
-  font-size: 40px;
-  display: absolute;
-  margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}*/
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-  margin-bottom: 5px;
-}
-
 section {
   margin: 0 auto;
   width: 800px;
-}
-
-.about {
-  margin: 0;
-}
-.about p {
-  text-align: center;
-  margin: 0;
-}
-
-input, button {
-  height: 40px;
-}
-
-input {
-  padding: 0 10px;
-  width: 300px;
 }
 
 h2 {
@@ -67,21 +30,10 @@ h2 {
   width: 100%;
 }
 
-nav p {
-  text-align: center;
-  color: white;
-  font-size: 14px;
-  display: absolute;
-  margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-/* Nav */
-
+/* INTRO */
 .intro {
   background-image: url("bg.jpg");
+  box-shadow: 
   background-size: cover;
   background-position: top;
   position: relative;
@@ -104,19 +56,38 @@ div.center {
   transform: translateY(-99%);
 }
 .firstbillion {
+  font-size: 24px;
   text-align: center;
   color: white;
   z-index: 2;
+}
+.firstbillion p {
+  font-size: 12px;
+}
+/* ABOUT */
+.about {
+  margin: 20px 0 0 0;
+}
+.about p {
+  text-align: center;
+  margin: 0;
+  font-size: 12px;
+}
+
+.calltoaction {
+  position: absolute;
+  background-color: #F2F2F2;
 }
 /* Instructions */
 /* SEND MONEY */
 .sendmoney {
   float: left;
-  width: 150px;
+  max-width: 174px;
   border: 1px;
   border-color: gray;
   background: #f2f2f2;
   display: block;
+  margin: 45px;
 }
 .sendmoneycircle {
   border: 1px solid #a1a1a1;
@@ -125,11 +96,9 @@ div.center {
   height: 150px;
   width: 150px;
   border-radius: 100%;
+  position: center;
 }
 .sendmoney p {
-  display: none;
-}
-.sendmoney:hover p {
   text-align: center;
   font-size: 10px;
   display: block
@@ -137,16 +106,17 @@ div.center {
 .fa.fa-money.fa-4x {
   text-align: center;
   color: gray;
-  margin: auto;
+  margin-top: 25px;
   display: block;
 }
 
 /* RECEIVE */
 .receive {
-  width: 150px;
+  width: 174px;
   background: #f2f2f2;
   display: block;
   float: left;
+  margin: 45px;
 }
 .receivecircle {
   border: 1px solid #a1a1a1;
@@ -158,9 +128,6 @@ div.center {
   display: block;
 }
 .receive p {
-  display: none;
-}
-.receive:hover p {
   text-align: center;
   font-size: 10px;
   display: block;
@@ -169,15 +136,15 @@ div.center {
   text-align: center;
   color: gray;
   display: block;
+  margin-top: 25px;
 }
 /* REPEAT */
 .repeat {
   float: left;
-  width: 150px;
+  width: 174px;
   background: #f2f2f2;
   display: block;
-  position: relative;
-  top: -240px;
+  margin: 45px;
 }
 .repeatcircle {
   border: 1px solid #a1a1a1;
@@ -189,9 +156,6 @@ div.center {
   display: block;
 }
 .repeat p {
-  display: none;
-}
-.repeat:hover p {
   text-align: center;
   font-size: 10px;
   display: block;
@@ -200,6 +164,7 @@ div.center {
   text-align: center;
   color: gray;
   display: block;
+  margin-top: 25px;
 }
 
 h3 {
@@ -222,5 +187,4 @@ footer p {
   color: white;
   padding: 10px;
 }
-
 
